@@ -24,6 +24,8 @@ import org.jackhuang.hmcl.mod.RemoteModRepository;
 import org.jackhuang.hmcl.util.Immutable;
 import org.jackhuang.hmcl.util.Lang;
 import org.jackhuang.hmcl.util.Pair;
+import org.jackhuang.hmcl.util.StringUtils;
+import org.jackhuang.hmcl.util.versioning.GameVersionNumber;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
@@ -211,7 +213,13 @@ public class CurseAddon implements RemoteMod.IMod {
     }
 
     public RemoteMod toMod() {
-        String iconUrl = Optional.ofNullable(logo).map(Logo::getThumbnailUrl).orElse("");
+        String iconUrl = "";
+        if (logo != null) {
+            if (StringUtils.isNotBlank(logo.getThumbnailUrl()))
+                iconUrl = logo.getThumbnailUrl();
+            else if (StringUtils.isNotBlank(logo.getUrl()))
+                iconUrl = logo.getUrl();
+        }
 
         return new RemoteMod(
                 slug,
@@ -585,12 +593,12 @@ public class CurseAddon implements RemoteMod.IMod {
                         }
                         return RemoteMod.Dependency.ofGeneral(RELATION_TYPE.get(dependency.getRelationType()), CurseForgeRemoteModRepository.MODS, Integer.toString(dependency.getModId()));
                     }).distinct().filter(Objects::nonNull).collect(Collectors.toList()),
-                    gameVersions.stream().filter(ver -> ver.startsWith("1.") || ver.contains("w")).collect(Collectors.toList()),
+                    gameVersions.stream().filter(GameVersionNumber::isKnown).toList(),
                     gameVersions.stream().flatMap(version -> {
                         if ("fabric".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.FABRIC);
                         else if ("forge".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.FORGE);
                         else if ("quilt".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.QUILT);
-                        else if ("neoforge".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.NEO_FORGED);
+                        else if ("neoforge".equalsIgnoreCase(version)) return Stream.of(ModLoaderType.NEO_FORGE);
                         else return Stream.empty();
                     }).collect(Collectors.toList())
             );
